// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple examples 1`] = `
<div>
  <div
    className="css-10fipge-CodeBlockBar e6sdwpg0"
  >
    <div
      className=" css-k377xg-container"
      onKeyDown={[Function]}
    >
      <div
        className=" css-ypb917-control"
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
      >
        <div
          className=" css-86rg1c-ValueContainer"
        >
          <div
            className=" css-gn3biy-singleValue"
          >
            PHP
          </div>
          <input
            aria-autocomplete="list"
            className="css-62g3xt-dummyInput"
            disabled={false}
            id="react-select-2-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            readOnly={true}
            tabIndex="0"
            value=""
          />
        </div>
        <div
          className=" css-1hb7zxy-IndicatorsContainer"
        >
          <span
            className=" css-43ykx9-indicatorSeparator"
          />
          <div
            aria-hidden="true"
            className=" css-1hkylt5-indicatorContainer"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              width={7}
            />
          </div>
        </div>
      </div>
    </div>
    <button
      className="css-12os3vt-CopyButton e6sdwpg1"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      copy
       
      <svg />
    </button>
  </div>
  <div
    className="css-a8d8hz-CodeBlock e6sdwpg3"
  >
    <pre>
      <code />
    </pre>
  </div>
</div>
`;

exports[`single example 1`] = `
<div>
  <div
    className="css-10fipge-CodeBlockBar e6sdwpg0"
  >
    <div
      className="css-1vovl9e-BarText e6sdwpg2"
    >
      javascript
    </div>
    <button
      className="css-12os3vt-CopyButton e6sdwpg1"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      copy
       
      <svg />
    </button>
  </div>
  <div
    className="css-a8d8hz-CodeBlock e6sdwpg3"
  >
    <pre>
      <code />
    </pre>
  </div>
</div>
`;
